# volley

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GAMEPLAY.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: REQUIREMENTS_AUDIT.md
scripts/: generate_sfx.py
src/volley/: __init__.py  ai.py  audio.py  config.py  main.py  settings.py  theming.py
src/volley/entities/: ball.py  paddle.py  particles.py
src/volley/states/: __init__.py  base.py  controls_screen.py  countdown.py  difficulty_select.py  game_over.py  main_menu.py  mode_select.py  paused.py  playing.py  settings_screen.py
src/volley/ui/: button.py  menu.py  text_fx.py
tests/: test_ai.py  test_ball_physics.py  test_collision.py  test_particles.py  test_scoring.py  test_settings.py  test_state_machine.py
