[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volley"
version = "0.1.0"
description = "Volley is a polished Pong-style arcade game built with Python and Pygame."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "adeelone"}]
dependencies = [
  "pygame-ce>=2.5.3",
  "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "mypy==1.13.0",
  "pre-commit==4.0.1",
  "pyinstaller==6.21.0",
  "pytest==8.3.4",
  "pytest-cov==7.1.0",
  "ruff==0.8.2",
]

[project.scripts]
volley = "volley.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
volley = ["assets/sfx/*.wav", "assets/music/*.wav", "assets/fonts/*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-work -p no:cacheprovider --cov=volley.entities --cov=volley.ai --cov=volley.settings --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
data_file = ".pytest-work/.coverage"
